# DSA-Practice

udemy_bible_comp_prog/: CMakeLists.txt  main.cc  readme.md
udemy_bible_comp_prog/02_math_fundamentals/: fast_modular_exponentiaition_test.cc  is_prime.h  is_prime_test.cc  prime_factors.cc  prime_factors.h  prime_factors_test.cc  sieve_of_eratosthenes.h  sieve_of_eratosthenes_test.cc
